@@ -44,6 +44,7 @@ class TodoyuPreferenceManager {
 	 * @param	Boolean		$unique
 	 * @param	Integer		$idArea
 	 * @param	Integer		$idPerson
+	 * @return	Integer		Autogenerated ID
 	 */
 	public static function savePreference($extID, $preference, $value, $idItem = 0, $unique = false, $idArea = 0, $idPerson = 0) {
 		$extID		= (int) $extID;
@@ -69,7 +70,7 @@ class TodoyuPreferenceManager {
 			'value'		=> $value
 		);
 
-		Todoyu::db()->doInsert($table, $data);
+		return Todoyu::db()->doInsert($table, $data);
 	}
 
 
