@@ -3,6 +3,7 @@ todoyu core changelog
 core 2.2.0 - not released yet
 	* Feature: Removing valueless foreign records does not require confirmation anymore
 	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
+	* Added: Installer now focuses it's first form field on page load
 	* Added: prototype.js plugin "svginner"
 	* Added: TodoyuTime.getDayTimestampsInRange can now optionally ommit weekend days
 	* Added: Todoyu.Popups (open, openElement, openContent) can now optionally position the popup to a top coordinate
